first run of tests shows react doesn't want a hook called in an event handler (contents of reducers shouldn't be called in useEffect?)

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,11 @@
 body{
   font-family: 'Lato', sans-serif;
+  display: flex;
+}
+header{
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 ::placeholder{
   font-family: 'Lato', sans-serif;
@@ -8,8 +14,15 @@ button{
   font-family: 'Lato', sans-serif;
 }
 
-.text-container{
+
+/* .text-container{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 80%;
+} */
+
+.chat-head{
+  width: 80%;
 }
