--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,14 +15,19 @@ button{
 }
 
 
-/* .text-container{
+.text-container{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 80%;
-} */
+  width: 100%;
+}
+.image-container{
+  display: flex;
+
+  justify-content: space-around;
+  width: 100%;
+}
 
 .chat-head{
-  width: 80%;
+  width: 30%;
 }
