--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,9 +11,29 @@ header{
   font-family: 'Lato', sans-serif;
 }
 button{
+  margin: 10px;
   font-family: 'Lato', sans-serif;
+  background-color: #EE3C23;
+  color: white;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+
+  font-size: 2rem;
+
+
+}
+button:focus {
+
+  background-color: #791305;
+  transition: .1s
 }
 
+button:hover{
+  background-color: #9c1807;
+  color: white;
+  transition: .3s;
+}
 
 .text-container{
   display: flex;
@@ -30,4 +50,8 @@ button{
 
 .chat-head{
   width: 30%;
+}
+
+label{
+  padding: 5px;
 }
